--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         {
             "name": "Indunil Peramuna",
             "email": "iperamuna@gmail.com",
-            "homepage": "https://github.com/iperamuna"
+            "homepage": "https://iperamuna.online"
         }
     ],
     "autoload": {
