Add development tools: .gitignore, test script, and documentation

--- a/composer.json
+++ b/composer.json
@@ -40,5 +40,8 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
+    },
+    "scripts": {
+        "test": "vendor/bin/pest"
     }
 }
