--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "require-dev": {
         "orchestra/testbench": "^9.0",
         "pestphp/pest": "4.x-dev",
-        "pestphp/pest-plugin-laravel": "^4.0"
+        "pestphp/pest-plugin-laravel": "^4.0",
+        "laravel/pint": "^1.27"
     },
     "config": {
         "allow-plugins": {
